Fixed bug with search word not showing in some instances

--- a/_sass/layouts/_header.scss
+++ b/_sass/layouts/_header.scss
@@ -267,7 +267,7 @@ header[role="banner"] {
                 justify-content: space-between;
                 font-size: 2rem;
                 line-height: 2.5rem;
-                color: $green;
+                color: $primary;
               }
 
               svg {
